Don't instantiate Integers and Booleans if not needed
git-svn-id: http://argouml-cpp.tigris.org/svn/argouml-cpp/trunk@137 2f534547-b31d-0410-8985-b8bd6d4fc62e